Добавил логотип и иконку

--- a/index.html
+++ b/index.html
@@ -4,27 +4,28 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>IpotechTrade — Telegram-бот для автоторговли</title>
-    <meta name="description" content="Автоматическая торговля с Telegram-ботом. Поддержка Bybit и Binance. Нарастающая доходность, простое подключение." />
+    <title>IpotechTrade — Робот для автоторговли</title>
+    <meta name="description" content="Автоматическая торговля. Поддержка Bybit и Binance. Нарастающая доходность, простое подключение." />
 
     <!-- Canonical -->
     <link rel="canonical" href="%VITE_SITE_URL%" />
 
     <!-- Open Graph -->
-    <meta property="og:title" content="IpotechTrade — Telegram-бот для автоторговли" />
-    <meta property="og:description" content="Автоматическая торговля с Telegram-ботом. Подключение за 2 минуты: Bybit и Binance." />
+    <meta property="og:title" content="IpotechTrade — бот для автоторговли" />
+    <meta property="og:description" content="Автоматическая торговля с ботом. Подключение за 2 минуты: Bybit и Binance." />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="%VITE_SITE_URL%" />
     <meta property="og:image" content="%VITE_SITE_URL%/og-image.png" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="IpotechTrade — Telegram-бот для автоторговли" />
+    <meta name="twitter:title" content="IpotechTrade — бот для автоторговли" />
     <meta name="twitter:description" content="Подключите биржу и запустите бота. База знаний и инструкции внутри." />
     <meta name="twitter:image" content="%VITE_SITE_URL%/og-image.png" />
 
     <!-- Favicon и манифест -->
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" type="image/png" href="/favicon.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="/favicon.png" sizes="192x192" />
     <link rel="manifest" href="/site.webmanifest" />
   </head>
   <body>
