--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
     <link rel="icon" type="image/png" href="/favicon.png" sizes="32x32" />
     <link rel="icon" type="image/png" href="/favicon.png" sizes="192x192" />
     <link rel="manifest" href="/site.webmanifest" />
+
+    <!-- Telegram WebApp SDK -->
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
   </head>
   <body>
     <div id="root"></div>
