--- a/index.html
+++ b/index.html
@@ -34,5 +34,20 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script>
+      // Ранняя проверка Telegram WebApp для отладки
+      window.addEventListener('DOMContentLoaded', function() {
+        console.log('[WebApp Debug] DOM loaded, checking Telegram WebApp...');
+        console.log('[WebApp Debug] window.Telegram:', window.Telegram);
+        if (window.Telegram?.WebApp) {
+          console.log('[WebApp Debug] WebApp found, initData:', window.Telegram.WebApp.initData ? 'available' : 'not available');
+          if (window.Telegram.WebApp.initData) {
+            console.log('[WebApp Debug] initData length:', window.Telegram.WebApp.initData.length);
+          }
+        } else {
+          console.log('[WebApp Debug] WebApp not found');
+        }
+      });
+    </script>
   </body>
 </html>
